--- a/app.html
+++ b/app.html
@@ -479,15 +479,27 @@ const state = {
       "Content-Type": "application/json",
       "X-Telegram-InitData": initData
     });
+
+    // Timeout to avoid endless skeletons
+    const controller = new AbortController();
+    const t = setTimeout(()=>controller.abort(), 12000);
+    opts.signal = controller.signal;
+
     return fetch(path, opts).then(async (res)=>{
+      clearTimeout(t);
       const text = await res.text();
       let data = null;
       try { data = text ? JSON.parse(text) : null; } catch(e){}
+
       if (!res.ok){
-        const msg = (data && (data.detail || data.message)) || `HTTP ${res.status}`;
+        const msg = (data && (data.detail || data.message)) || text || `HTTP ${res.status}`;
         throw new Error(msg);
       }
       return data;
+    }).catch((e)=>{
+      clearTimeout(t);
+      if (e && e.name === "AbortError") throw new Error("Таймаут загрузки (12s). Проверь соединение и попробуй ещё раз.");
+      throw e;
     });
   }
 
@@ -578,13 +590,16 @@ const state = {
 
     try{
       const data = await apiFetch("/api/today", {method:"GET"});
-      state.items = Array.isArray(data.items) ? data.items : [];
+      state.items = (data && Array.isArray(data.items)) ? data.items : [];
       state.loading = false;
       renderToday();
     }catch(e){
       state.loading = false;
-      showError(els.error, e && e.message ? e.message : "Ошибка загрузки");
+      const msg = (e && e.message) ? e.message : "Ошибка загрузки";
+      showError(els.error, msg);
       els.list.innerHTML = `<div class="empty">Не удалось загрузить данные.</div>`;
+      try{ toast("⚠️" + msg); }catch(_){}
+    }finally{
       updateButtons();
     }
   }
@@ -864,8 +879,8 @@ const state = {
   }
 
   // bindings
-  els.tabToday.addEventListener("click", ()=>setScreen("today"));
-  els.tabPlants.addEventListener("click", ()=>setScreen("plants"));
+  els.tabToday.addEventListener("click", ()=>{ setScreen("today"); loadToday(); });
+els.tabPlants.addEventListener("click", ()=>setScreen("plants"));
   if (els.tabNorms) els.tabNorms.addEventListener("click", ()=>setScreen("norms"));
 
   els.btnWater.addEventListener("click", markWatered);  els.plantsActive.addEventListener("click", ()=>{
