--- a/app.html
+++ b/app.html
@@ -443,10 +443,12 @@ const state = {
   }
 
   function showError(el, msg){
+    if (!el) return;
     el.style.display = "block";
     el.textContent = msg;
   }
   function clearError(el){
+    if (!el) return;
     el.style.display = "none";
     el.textContent = "";
   }
@@ -480,27 +482,21 @@ const state = {
       "X-Telegram-InitData": initData
     });
 
-    // Timeout to avoid endless skeletons
-    const controller = new AbortController();
-    const t = setTimeout(()=>controller.abort(), 12000);
-    opts.signal = controller.signal;
+    const timeoutMs = 12000;
+    const timeout = new Promise((_, reject)=>setTimeout(()=>reject(new Error(`Таймаут загрузки (${timeoutMs/1000}s).`)), timeoutMs));
 
-    return fetch(path, opts).then(async (res)=>{
-      clearTimeout(t);
+    const req = fetch(path, opts).then(async (res)=>{
       const text = await res.text();
       let data = null;
       try { data = text ? JSON.parse(text) : null; } catch(e){}
-
       if (!res.ok){
         const msg = (data && (data.detail || data.message)) || text || `HTTP ${res.status}`;
         throw new Error(msg);
       }
       return data;
-    }).catch((e)=>{
-      clearTimeout(t);
-      if (e && e.name === "AbortError") throw new Error("Таймаут загрузки (12s). Проверь соединение и попробуй ещё раз.");
-      throw e;
     });
+
+    return Promise.race([req, timeout]);
   }
 
   // -------- TODAY --------
@@ -588,12 +584,25 @@ const state = {
     els.list.innerHTML = `<div class="skeleton"></div><div class="skeleton"></div><div class="skeleton"></div>`;
     clearError(els.error);
 
+    let done = false;
+    const watchdog = setTimeout(()=>{
+      if (done) return;
+      state.loading = false;
+      showError(els.error, "Не удалось загрузить данные: таймаут. Скорее всего, /api/today не отвечает или отклоняет запрос.");
+      els.list.innerHTML = `<div class="empty">Не удалось загрузить данные.</div>`;
+      updateButtons();
+    }, 13000);
+
     try{
       const data = await apiFetch("/api/today", {method:"GET"});
+      done = true;
+      clearTimeout(watchdog);
       state.items = (data && Array.isArray(data.items)) ? data.items : [];
       state.loading = false;
       renderToday();
     }catch(e){
+      done = true;
+      clearTimeout(watchdog);
       state.loading = false;
       const msg = (e && e.message) ? e.message : "Ошибка загрузки";
       showError(els.error, msg);
