--- a/app.html
+++ b/app.html
@@ -38,7 +38,7 @@
 
     /* Top brand */
 .topbar{margin-top:8px;}
-.brand{display:flex;align-items:flex-start;gap:10px;justify-content:flex-start;}
+.brand{display:flex;align-items:flex-start;gap:10px;justify-content:flex-start;margin-bottom:24px;}
 .brand-emoji{font-size:42px;line-height:1;}
 .brand-text{display:flex;flex-direction:column;gap:2px;}
 .brand-title{font-family:"Fredoka", system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Arial, sans-serif;font-weight:700;font-size:28px;letter-spacing:-0.02em;color:var(--brand);line-height:1.05;}
