--- a/app.html
+++ b/app.html
@@ -47,7 +47,7 @@
 /* Tabs */
 .tabs{display:flex;gap:12px;margin:14px 0 10px;flex-wrap:wrap}
     .seg{display:flex;gap:10px;flex-wrap:wrap}
-.tab{border:1px solid var(--border);background:var(--card);color:var(--muted);padding:16px 22px;border-radius:999px;font-weight:800; box-shadow:0 6px 18px rgba(42,45,52,.10); cursor:pointer}
+.tab{border:1px solid var(--border);background:var(--card);color:var(--muted);padding:16px 22px;border-radius:999px;font-weight:800; box-shadow:0 6px 18px rgba(42,45,52,.10); cursor:pointer;font-size:16px;min-height:52px;}
 .tab.active{color:var(--tabAccent);border-color:rgba(0,151,178,.55); box-shadow:0 10px 22px rgba(0,151,178,.14)}
 .screen{display:none}
 .screen.active{display:block}
@@ -195,8 +195,6 @@
 
     /* --- Tabs / Screens --- */
     .tabs{display:flex;gap:10px;margin:12px 0 10px;flex-wrap:wrap}
-    .tab{border:1px solid var(--border);background:var(--card);color:var(--muted);padding:10px 12px;border-radius:999px;
-      font-weight:700; box-shadow:0 4px 14px rgba(42,45,52,.06); cursor:pointer}
     .tab.active{color:var(--tabAccent);border-color:rgba(0,151,178,.55); box-shadow:0 10px 22px rgba(0,151,178,.14)}
     .screen{display:none}
     .screen.active{display:block}
