--- a/app.html
+++ b/app.html
@@ -176,7 +176,7 @@
     }
     .btn:disabled{opacity:.55;box-shadow:none;cursor:default;}
 
-    .empty{margin:28px 0;padding:26px 18px;border-radius:var(--radius);border:1px dashed rgba(125,217,87,.45);background:rgba(125,217,87,.06);color:var(--brandText);font-weight:900;text-align:center;}
+    .empty{display:flex;align-items:center;justify-content:center;min-height:50vh;font-weight:600;font-size:18px;color:#2f2f2f}
 
     .skeleton{
       height:74px;
